--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -187,7 +187,7 @@
 
 \title{Applied Philosophy of Science and Data Ethics}
 \author{Dr.~Carlos Vega}
-\date{2021 - 2026: ~Last compiled: 2026-01-20}
+\date{2021 - 2026: ~Last compiled: 2026-01-21}
 
 \begin{document}
 \maketitle
@@ -3178,7 +3178,7 @@ As can be seen, this value is closer to the degree of our synthetic data \texttt
 \end{Shaded}
 
 \begin{verbatim}
-## Estimated Effect (revised model): 10.095828768814414
+## Estimated Effect (revised model): 10.095828768814442
 \end{verbatim}
 
 \chapter{Experimental Control and Statistical Abuse}\label{stats-abuse}
@@ -4125,6 +4125,17 @@ My personal take on this, is as follows: It is argued that from a future perspec
 
 \subsection{Greenland's size}\label{greenlands-size}
 
+
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.75\linewidth]{Figures/mercator} 
+
+}
+
+\caption{These maps show two different approaches to depicting Greenland. The left map is an orthographic projection, emulating a globe. The right map is a Mercator projection, which exaggerates the sizes of landmasses --- including Greenland. Alyson Hurt / NPR}\label{fig:greenland-map}
+\end{figure}
+
 Many people believe that Greenland is comparable in size to Africa or larger than South America.
 
 This belief is widespread in textbooks, news media, and online discussions.~This belief is reinforced by commonly used world maps based on the Mercator projection, where Greenland appears vastly larger than it truly is.
@@ -4133,7 +4144,7 @@ In reality, Greenland's surface area is approximately 2.1 million km², while Af
 
 This example illustrates how correct data, when transformed, aggregated, or visualised improperly, can generate persistent and intuitive false beliefs. Distortions from data synthetisation may be intentional or accidental, yet their effects are powerful, especially when visual representations are treated as neutral or self-explanatory.
 
-Answer the following questions.
+Answer the following questions:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -4148,7 +4159,7 @@ Answer the following questions.
   In your opinion, when does data stop describing reality and start constructing it?
 \end{enumerate}
 
-\textbf{How to approach the answers}
+\textbf{How to approach the answers:}
 
 This exercise is designed to help you reason about \textbf{distortion introduced by data synthesis and representation}, rather than errors in measurement or data collection. The goal is not to test geographical knowledge, but to see how \emph{true data} can still lead to \emph{false beliefs} once transformed or visualised.
 
@@ -4210,6 +4221,15 @@ Across medicine, public health, history, and environmental management, the cases
 
 \subsection{Al-Razi and Hospital Location}\label{al-razi-and-hospital-location}
 
+\begin{wrapfigure}{R}{.33\textwidth}  
+ \begin{center}
+    \includegraphics[width=.30\textwidth]{Figures/learning_from_history_al_razi.jpg}  
+  \captionsetup{labelformat=empty}
+  \caption{Rhazes, a physician, examines a kneeling boy who has his mouth wide open, they are in a surgery full of equipment.} 
+\end{center}
+\end{wrapfigure}
+\addtocounter{figure}{-1}
+
 In the 10th century, the Persian physician \textbf{Al-Razi} was tasked with selecting the most suitable location for a new hospital in Baghdad, a large and densely populated city. At the time, medical knowledge relied heavily on authority, tradition, and humoral theories, and there were no instruments to measure air quality, pollution, or disease risk.
 
 Rather than choosing a location based on prestige, custom, or anecdotal reputation, Al-Razi sought a method that relied on observable differences across districts. He placed pieces of raw meat in several parts of the city and monitored how quickly they decayed. His reasoning was indirect: faster decay suggested environmental conditions that might also promote illness, while slower decay suggested cleaner air.
@@ -4233,7 +4253,7 @@ This approach did not involve experimental control, randomisation, or a causal t
   Give a modern data-science analogy to Al-Razi's approach.
 \end{enumerate}
 
-\textbf{How to approach the answers}
+\textbf{How to approach the answers:}
 
 \begin{itemize}
 \tightlist
@@ -4250,6 +4270,15 @@ This approach did not involve experimental control, randomisation, or a causal t
 \end{itemize}
 
 \subsection{Ibn Sina and Medical Evidence}\label{ibn-sina-and-medical-evidence}
+
+\begin{wrapfigure}{R}{.33\textwidth}  
+ \begin{center}
+    \includegraphics[width=.30\textwidth]{Figures/learning_from_history_avicena.jpg}  
+  \captionsetup{labelformat=empty}
+  \caption{Modern portrait of Ibn Sina, US National Library of Medicine (1952).} 
+\end{center}
+\end{wrapfigure}
+\addtocounter{figure}{-1}
 
 In the 11th century, \textbf{Ibn Sina (Avicenna)} reflected critically on medical practice. He observed that physicians often inferred the effectiveness of treatments after witnessing a few apparent recoveries, without considering alternative explanations.
 
@@ -4272,7 +4301,7 @@ Although formal experimental methods were not yet developed, Ibn Sina articulate
   Give one example of how Ibn Sina's critique applies to modern data science or machine learning.
 \end{enumerate}
 
-\textbf{How to approach the answers}
+\textbf{How to approach the answers:}
 
 \begin{itemize}
 \tightlist
@@ -4287,6 +4316,17 @@ Although formal experimental methods were not yet developed, Ibn Sina articulate
 \end{itemize}
 
 \subsection{Florence Nightingale and Military Mortality}\label{florence-nightingale-and-military-mortality}
+
+
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.75\linewidth]{Figures/learning_from_history_nightingale} 
+
+}
+
+\caption{Florence Nightingale's 1858 `Rose Diagram'. It uses color-coded wedges to show that more soldiers died from preventable infections (blue) than from battlefield wounds (red). By comparing mortality before and after sanitary reforms, she visually proved that basic hygiene and ventilation drastically reduced death rates, transforming military healthcare forever.}\label{fig:florence-pic}
+\end{figure}
 
 During the Crimean War in the 1850s, \textbf{Florence Nightingale} confronted widespread assumptions about military deaths. High mortality among soldiers was often attributed directly to battle injuries, reinforcing the belief that little could be done beyond improving combat medicine.
 
@@ -4309,7 +4349,7 @@ Although Nightingale could not run controlled experiments or randomise condition
   Why was Nightingale's use of data ethically significant?
 \end{enumerate}
 
-\textbf{How to approach the answers}
+\textbf{How to approach the answers:}
 
 \begin{itemize}
 \tightlist
@@ -4324,6 +4364,17 @@ Although Nightingale could not run controlled experiments or randomise condition
 \end{itemize}
 
 \subsection{The Collapse of Angkor}\label{the-collapse-of-angkor}
+
+
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.75\linewidth]{Figures/learning_from_history_angkor} 
+
+}
+
+\caption{Facade of Angkor Wat, a drawing by Henri Mouhot (1860)}\label{fig:angkor-pic}
+\end{figure}
 
 When French explorer \textbf{Henri Mouhot} encountered Angkor in the 19th century, he interpreted its overgrown monuments as evidence of sudden civilisational collapse. This interpretation relied heavily on visible ruins as proxies for societal vitality.
 
@@ -4346,7 +4397,7 @@ Later historical accounts and modern remote sensing revealed a different picture
   Propose a data-science analogue where a convenient proxy drives a wrong narrative, and name one mitigation.
 \end{enumerate}
 
-\textbf{How to approach the answers}
+\textbf{How to approach the answers:}
 
 \begin{itemize}
 \tightlist
@@ -4362,7 +4413,16 @@ Later historical accounts and modern remote sensing revealed a different picture
   Include ethical dimensions of power and representation.
 \end{itemize}
 
-\subsection{Ignaz Goldziher}\label{ignaz-goldziher}
+\subsection{Ignaz Goldziher: From Textual Corpora to Historical Claims}\label{ignaz-goldziher-from-textual-corpora-to-historical-claims}
+
+\begin{wrapfigure}{R}{.33\textwidth}  
+ \begin{center}
+    \includegraphics[width=.30\textwidth]{Figures/learning_from_history_Goldziher.jpg}  
+  \captionsetup{labelformat=empty}
+  \caption{Ignác Goldziher (1850 - 1921)} 
+\end{center}
+\end{wrapfigure}
+\addtocounter{figure}{-1}
 
 In the late nineteenth century, \textbf{Ignaz Goldziher} studied large corpora of Islamic legal and religious texts. Earlier scholars treated these texts as direct historical observations, assuming that many similar reports implied factual accuracy about early Islamic history.
 
@@ -4387,7 +4447,7 @@ Goldziher's insight was not that the data were useless, but that they measured \
   Give a modern data-science example where data accurately reflects a process but is commonly misinterpreted as measuring a different target.
 \end{enumerate}
 
-\textbf{How to approach the answers}
+\textbf{How to approach the answers:}
 
 \begin{itemize}
 \tightlist
@@ -4402,6 +4462,17 @@ Goldziher's insight was not that the data were useless, but that they measured \
 \end{itemize}
 
 \subsection{Wu Lien-teh and the Manchurian Plague}\label{wu-lien-teh-and-the-manchurian-plague}
+
+
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.75\linewidth]{Figures/learning_from_history_wu} 
+
+}
+
+\caption{Dr Wu Lien-Teh working in his laboratory in Harbin, China, 1911}\label{fig:manchuria-pic}
+\end{figure}
 
 In the early 1910s, during a plague outbreak in Manchuria, prevailing medical theories emphasised flea-borne transmission. \textbf{Wu Lien-teh} observed rapid spread among people with close contact, including medical staff, suggesting airborne transmission.
 
@@ -4424,7 +4495,7 @@ The case exemplifies abductive reasoning under severe time pressure and highligh
   What lesson does this case provide for data science in crisis situations?
 \end{enumerate}
 
-\textbf{How to approach the answers}
+\textbf{How to approach the answers:}
 
 \begin{itemize}
 \tightlist
@@ -4439,6 +4510,15 @@ The case exemplifies abductive reasoning under severe time pressure and highligh
 \end{itemize}
 
 \subsection{Janet Lane-Claypon and Breast Cancer Research}\label{janet-lane-claypon-and-breast-cancer-research}
+
+\begin{wrapfigure}{R}{.33\textwidth}  
+ \begin{center}
+    \includegraphics[width=.30\textwidth]{Figures/learning_from_history_janet.png}  
+  \captionsetup{labelformat=empty}
+  \caption{Janet Lane-Claypon (1877 - 1967)} 
+\end{center}
+\end{wrapfigure}
+\addtocounter{figure}{-1}
 
 In the early 20th century, \textbf{Janet Lane-Claypon} investigated possible causes of breast cancer. Many suspected factors were common among affected women, but this alone did not establish causation.
 
@@ -4463,7 +4543,7 @@ This comparative approach marked an early form of case-control reasoning and lai
   Why is this comparative approach ethically preferable to other types of experimentation?
 \end{enumerate}
 
-\textbf{How to approach the answers}
+\textbf{How to approach the answers:}
 
 \begin{itemize}
 \tightlist
@@ -4478,6 +4558,17 @@ This comparative approach marked an early form of case-control reasoning and lai
 \end{itemize}
 
 \subsection{Terranova, the Northern Cod Collapse}\label{terranova-the-northern-cod-collapse}
+
+
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.75\linewidth]{Figures/learning_from_history_cod} 
+
+}
+
+\caption{Collapse of Atlantic cod stocks off Newfoundland (1992): Offshore trawling since the 1950s drove catches up but biomass down, and international and national quotas failed to stop the decline.}\label{fig:code-pic}
+\end{figure}
 
 From the late 1970s to the early 1990s, Canadian regulators relied on stock-assessment models to manage the Northern cod fishery. Indicators such as catch-per-unit-effort suggested stability, even as cod populations declined.
 
@@ -4498,7 +4589,7 @@ Industrial fishing fleets increasingly concentrated in remaining high-density ar
   What non-epistemic values were in tension when setting quotas (name two)?
 \end{enumerate}
 
-\textbf{How to approach the answers}
+\textbf{How to approach the answers:}
 
 \begin{itemize}
 \tightlist
@@ -4513,6 +4604,15 @@ Industrial fishing fleets increasingly concentrated in remaining high-density ar
 \end{itemize}
 
 \subsection{Li Wenliang and Early COVID-19 Signals}\label{li-wenliang-and-early-covid-19-signals}
+
+\begin{wrapfigure}{R}{.33\textwidth}  
+ \begin{center}
+    \includegraphics[width=.30\textwidth]{Figures/learning_from_history_li.jpg}  
+  \captionsetup{labelformat=empty}
+  \caption{Li Wenliang (1985 - 2020)} 
+\end{center}
+\end{wrapfigure}
+\addtocounter{figure}{-1}
 
 In December 2019, \textbf{Li Wenliang}, an ophthalmologist in Wuhan, noticed several patients with unusual pneumonia symptoms resembling earlier SARS cases. At that stage, the number of cases was very small, no pathogen had been identified, and no epidemiological studies were available.
 
@@ -4537,7 +4637,7 @@ In hindsight, his warning proved correct. The case highlights the tension betwee
   What does this case teach about decision-making under uncertainty in high-stakes data-driven systems?
 \end{enumerate}
 
-\textbf{How to approach the answers}
+\textbf{How to approach the answers:}
 
 \begin{itemize}
 \tightlist
