--- a/08-Exercises.Rmd
+++ b/08-Exercises.Rmd
@@ -7,17 +7,15 @@
 
 ### Greenland's size
 
-(ref:greenland) These maps show two different approaches to depicting Greenland. The left map is an orthographic projection, emulating a globe. The right map is a Mercator projection, which exaggerates the sizes of landmasses — including Greenland. Alyson Hurt / NPR
+(ref:greenland) The left map shows an orthographic projection, emulating a globe. The right map is a Mercator projection, which exaggerates the sizes of landmasses, including Greenland. Alyson Hurt / NPR
 
 ```{r greenland-map, echo=F, fig.align="center", out.width="75%", fig.cap='(ref:greenland)'}
 knitr::include_graphics('Figures/mercator.png')
 ```
 
-Many people believe that Greenland is comparable in size to Africa or larger than South America.
+Many people believe that Greenland is comparable in size to Africa or larger than South America. This belief is widespread in textbooks, news media, and online discussions. This belief is reinforced by commonly used world maps based on the Mercator projection, where Greenland appears vastly larger than it truly is.
 
-This belief is widespread in textbooks, news media, and online discussions. This belief is reinforced by commonly used world maps based on the Mercator projection, where Greenland appears vastly larger than it truly is.
-
-In reality, Greenland’s surface area is approximately 2.1 million km², while Africa’s is about 30 million km². The apparent similarity in size is not due to incorrect measurements, but to a systematic distortion introduced by map projection and visual synthesis.
+In reality, Greenland’s surface area is approximately 2.1 million km², while Africa’s is about 30 million km². The apparent similarity in size is not due to incorrect measurements, but to a systematic distortion introduced by map projection and visual synthesis. In Fact, Greenland's size is comparable to countries like Saudi Arabia or Mexico.
 
 This example illustrates how correct data, when transformed, aggregated, or visualised improperly, can generate persistent and intuitive false beliefs. Distortions from data synthetisation may be intentional or accidental, yet their effects are powerful, especially when visual representations are treated as neutral or self-explanatory.
 
@@ -34,7 +32,7 @@ Answer the following questions:
 1. Give one example in data science where aggregation or visualisation can similarly mislead interpretation without involving false data.
 2. Explain why this example illustrates a problem of data synthesis and representation rather than incorrect data collection.
 3. Briefly explain how similar distortions in data science can contribute to biased narratives, echo chambers, or misguided policy decisions.
-4. In your opinion, when does data stop describing reality and start constructing it?
+4. When does data stop describing reality and start constructing it?
 
 **How to approach the answers:**
 
@@ -70,12 +68,15 @@ This question tests your ability to integrate epistemology, data practice, and e
 
 Overall, approach this exercise by keeping in mind that **data visualisations are not neutral windows onto reality**. They are models and syntheses that highlight some aspects while obscuring others, and this selective emphasis is precisely where both insight and distortion originate.
 
-
 ## Learning from History
 
 These exercises explore how knowledge is produced, interpreted, and acted upon under conditions of uncertainty by examining historical cases that mirror core problems in modern data science. 
 
 Across medicine, public health, history, and environmental management, the cases show how evidence is shaped by proxies, data-generating processes, missing controls, ethical constraints, and high-stakes decision-making. Rather than focusing on technical calculation, the questions invite you to reflect on reasoning: what data actually measure, what they fail to capture, how comparisons substitute for experiments, and why correct conclusions can sometimes emerge from weak or incomplete evidence. Together, the cases illustrate that epistemic judgement, not just data volume or statistical fit, is central to responsible inference and action 
+
+```{=latex}
+\newpage
+```
 
 ### Al-Razi and Hospital Location
 
@@ -83,7 +84,7 @@ Across medicine, public health, history, and environmental management, the cases
 cat(
 '<figure class="wrap-figure">
 <img src="Figures/learning_from_history_al_razi.jpg">
-<figcaption>Rhazes, a physician, examines a kneeling boy who has his mouth wide open, they are in a surgery full of equipment.</br></figcaption>
+<figcaption>Al-Razi examines a boy.</br></figcaption>
 </figure>'
 )
 ```
@@ -93,7 +94,7 @@ knitr::asis_output('\\begin{wrapfigure}{R}{.33\\textwidth}
  \\begin{center}
     \\includegraphics[width=.30\\textwidth]{Figures/learning_from_history_al_razi.jpg}  
   \\captionsetup{labelformat=empty}
-  \\caption{Rhazes, a physician, examines a kneeling boy who has his mouth wide open, they are in a surgery full of equipment.} 
+  \\caption{Al-Razi examines a boy.} 
 \\end{center}
 \\end{wrapfigure}
 \\addtocounter{figure}{-1}')
@@ -103,7 +104,7 @@ In the 10th century, the Persian physician **Al-Razi** was tasked with selecting
 
 Rather than choosing a location based on prestige, custom, or anecdotal reputation, Al-Razi sought a method that relied on observable differences across districts. He placed pieces of raw meat in several parts of the city and monitored how quickly they decayed. His reasoning was indirect: faster decay suggested environmental conditions that might also promote illness, while slower decay suggested cleaner air.
 
-This approach did not involve experimental control, randomisation, or a causal theory of disease transmission. Al-Razi could not isolate variables such as temperature, insects, or humidity, nor could he test alternative explanations. Nonetheless, his method represented a deliberate attempt to *compare* environments systematically using a proxy rather than speculation, authority, or superstition.
+This approach did not involve experimental control, randomisation, or a causal theory of disease transmission. He could not isolate variables such as temperature, insects, or humidity, nor could he test alternative explanations. However, his method represented a deliberate attempt to *compare* environments systematically using a proxy rather than speculation, authority, or superstition.
 
 **Questions**
 
@@ -115,7 +116,7 @@ This approach did not involve experimental control, randomisation, or a causal t
 
 **How to approach the answers:**
 
-- Identify the **epistemic role of a proxy** and distinguish it from direct measurement.
+- Find the **epistemic role of a proxy** and distinguish it from direct measurement.
 - Think about **what is being inferred vs. what is observed**.
 - Reflect on missing controls (confounders, standardisation, replication).
 - Emphasise why systematic comparison reduces arbitrariness but does not eliminate uncertainty.
@@ -145,7 +146,7 @@ knitr::asis_output('\\begin{wrapfigure}{R}{.33\\textwidth}
 
 In the 11th century, **Ibn Sina (Avicenna)** reflected critically on medical practice. He observed that physicians often inferred the effectiveness of treatments after witnessing a few apparent recoveries, without considering alternative explanations.
 
-Ibn Sina warned that recovery could result from natural healing, coincidence, or concurrent interventions. He argued that without systematic comparison and repetition under similar conditions, physicians risked mistaking chance or background processes for causal effects.
+He warned that recovery could result from natural healing, coincidence, or concurrent interventions. He argued that without systematic comparison and repetition under similar conditions, physicians risked mistaking chance or background processes for causal effects.
 
 Although formal experimental methods were not yet developed, Ibn Sina articulated a core insight of modern experimental reasoning: isolated success stories are epistemically weak. Reliable knowledge requires distinguishing treatment effects from background variation.
 
@@ -154,13 +155,13 @@ Although formal experimental methods were not yet developed, Ibn Sina articulate
 1. What epistemic problem does Ibn Sina identify in relying on individual treatment successes?  
 2. Why is the argument “the patient recovered after treatment, therefore the treatment works” problematic?  
 3. What core principle of experimental control is Ibn Sina implicitly advocating?  
-4. Give one example of how Ibn Sina’s critique applies to modern data science or machine learning.
+4. Give one example of how Ibn Sina’s critique applies to modern data science.
 
 **How to approach the answers:**
 
 - Focus on **post hoc reasoning** and confounding.
 - Identify the difference between **correlation, coincidence, and causation**.
-- Translate Ibn Sina’s insight into modern ideas like baselines, control groups, or validation.
+- Find modern analogies like baselines, control groups, or validation.
 - Use a contemporary example involving misleading performance claims.
 
 
@@ -175,13 +176,13 @@ knitr::include_graphics('Figures/learning_from_history_nightingale.png')
 
 During the Crimean War in the 1850s, **Florence Nightingale** confronted widespread assumptions about military deaths. High mortality among soldiers was often attributed directly to battle injuries, reinforcing the belief that little could be done beyond improving combat medicine.
 
-Nightingale collected detailed hospital records and noticed that most deaths occurred away from the battlefield. Rather than relying on total death counts, she reorganised the data by *cause of death* and *time period*. She then compared mortality patterns before and after sanitation reforms, using innovative visualisations to communicate her findings.
+Nightingale collected detailed hospital records and noticed that most deaths occurred away from the battlefield. Rather than relying on total death counts, she reorganised the data by *cause of death* and *time period*. She then compared mortality patterns before and after sanitation reforms, using visualisations to communicate her findings.
 
 Although Nightingale could not run controlled experiments or randomise conditions, she approximated control through structured comparison. Her work demonstrated how careful aggregation and disaggregation of observational data could reveal patterns that raw numbers concealed, and her analysis directly informed policy changes that saved lives.
 
 **Questions**
 
-1. Why were raw mortality numbers insufficient to support Nightingale’s conclusions?  
+1. Why were raw mortality numbers insufficient to support her conclusions?  
 2. What form of experimental control was approximated in Nightingale’s analysis?  
 3. What statistical issue would occur if deaths were not disaggregated by cause?  
 4. Why was Nightingale’s use of data ethically significant?
@@ -191,7 +192,7 @@ Although Nightingale could not run controlled experiments or randomise condition
 - Contrast **raw counts** with **structured comparisons**.
 - Identify what was being held approximately constant across time periods.
 - Consider aggregation bias and loss of explanatory resolution.
-- Link ethical significance to **prevention capacity**, responsibility, and policy impact.
+- Link ethics to **prevention capacity**, responsibility, and policy impact.
 
 
 ### The Collapse of Angkor
@@ -225,7 +226,7 @@ Later historical accounts and modern remote sensing revealed a different picture
 
 
 
-### Ignaz Goldziher: From Textual Corpora to Historical Claims
+### Goldziher: From Textual Corpora to Historical Claims
 
 ```{r, eval=knitr::is_html_output(excludes = "epub"), results = 'asis', echo = F}
 cat(
@@ -268,8 +269,6 @@ Goldziher’s insight was not that the data were useless, but that they measured
 - Explain why more data can amplify bias rather than correct it.
 - Link ethical responsibility to transparency and misuse prevention.
 
-
-
 ### Wu Lien-teh and the Manchurian Plague
 
 
@@ -300,7 +299,6 @@ The case exemplifies abductive reasoning under severe time pressure and highligh
 - Generalise to modern crisis analytics and precautionary action.
 
 
-
 ### Janet Lane-Claypon and Breast Cancer Research
 
 ```{r, eval=knitr::is_html_output(excludes = "epub"), results = 'asis', echo = F}
@@ -317,7 +315,7 @@ knitr::asis_output('\\begin{wrapfigure}{R}{.33\\textwidth}
  \\begin{center}
     \\includegraphics[width=.30\\textwidth]{Figures/learning_from_history_janet.png}  
   \\captionsetup{labelformat=empty}
-  \\caption{Janet Lane-Claypon (1877 - 1967)} 
+  \\caption{Dr Lane-Claypon (1877 - 1967)} 
 \\end{center}
 \\end{wrapfigure}
 \\addtocounter{figure}{-1}')
@@ -325,13 +323,13 @@ knitr::asis_output('\\begin{wrapfigure}{R}{.33\\textwidth}
 
 In the early 20th century, **Janet Lane-Claypon** investigated possible causes of breast cancer. Many suspected factors were common among affected women, but this alone did not establish causation.
 
-Lane-Claypon introduced a systematic comparison between women with breast cancer and women without it. By examining how frequently exposures appeared in each group, she showed that some seemingly important factors were actually common in the general population.
+She introduced a systematic comparison between women with breast cancer and women without it. By examining how frequently exposures appeared in each group, she showed that some seemingly important factors were actually common in the general population.
 
 This comparative approach marked an early form of case-control reasoning and laid the groundwork for modern epidemiology, allowing researchers to distinguish coincidence from potential causal influence.
 
 **Questions**
 
-1. Why were common exposures alone insufficient to identify causes of breast cancer?  
+1. Why were common exposures alone insufficient to identify causes of cancer?  
 2. What methodological innovation distinguishes Lane-Claypon’s approach?  
 3. How does this help avoiding misleading conclusions?  
 4. What kind of causal reasoning becomes possible once this innovation is introduced?  
@@ -345,21 +343,22 @@ This comparative approach marked an early form of case-control reasoning and lai
 - Discuss ethical constraints in medical research.
 
 
-
-
+```{=latex}
+\clearpage
+```
 
 
 ### Terranova, the Northern Cod Collapse
+
+From the late 1970s to the early 1990s, Canadian regulators relied on stock-assessment models to manage the Northern cod fishery. Indicators such as catch-per-unit-effort suggested stability, even as cod populations declined.
+
+Industrial fishing fleets increasingly concentrated in remaining high-density areas, masking broader collapse. Models remained statistically well-fit, but their assumptions failed under ecological change. When the collapse became undeniable, the resulting moratorium caused widespread social and economic harm.
 
 (ref:code-cap) Collapse of Atlantic cod stocks off Newfoundland (1992): Offshore trawling since the 1950s drove catches up but biomass down, and international and national quotas failed to stop the decline.
 
 ```{r code-pic, echo=F, fig.align="center", out.width="75%", fig.cap='(ref:code-cap)'}
 knitr::include_graphics('Figures/learning_from_history_cod.jpg')
 ```
-
-From the late 1970s to the early 1990s, Canadian regulators relied on stock-assessment models to manage the Northern cod fishery. Indicators such as catch-per-unit-effort suggested stability, even as cod populations declined.
-
-Industrial fishing fleets increasingly concentrated in remaining high-density areas, masking broader collapse. Models remained statistically well-fit, but their assumptions failed under ecological change. When the collapse became undeniable, the resulting moratorium caused widespread social and economic harm.
 
 **Questions**
 
@@ -395,7 +394,7 @@ knitr::asis_output('\\begin{wrapfigure}{R}{.33\\textwidth}
     \\includegraphics[width=.30\\textwidth]{Figures/learning_from_history_li.jpg}  
   \\captionsetup{labelformat=empty}
   \\caption{Li Wenliang (1985 - 2020)} 
-\\end{center}
+\\end{center} 
 \\end{wrapfigure}
 \\addtocounter{figure}{-1}')
 ```
